fixing gap

--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,13 @@
   padding: 0;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 html, body {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -110,9 +113,8 @@ p {
 
 .imac-box {
   position: relative;
-  width: 100%;
+  width: 96%;
   height: 600px;
-  margin-right: 20px;
 }
 
 .display-box {
@@ -299,9 +301,8 @@ p {
 }
 
 .bio-box {
-  width: 94%;
+  width: 100%;
   min-width: 390px;
-  margin: 0 auto;
   margin-top: 150px;
   background-color: white;
   text-align: center;
@@ -311,7 +312,6 @@ p {
   height: 250px;
   width: 250px;
   position: relative;
-  margin: 0;
   bottom: 125px;
   border: 1px solid rgba(0, 0, 0, 0);
   border-radius: 50%;
@@ -335,8 +335,7 @@ p {
   margin-top: 30px;
   color: white;
   text-align: center;
-  width: 100%;
-  padding: 0;
+  width:  100%;
   padding-bottom: 20px;
   padding-top: 10px;
   height: auto;
@@ -345,21 +344,6 @@ p {
 .contact-text {
   text-align: center;
   font-size: 20px;
-}
-
-.hobby-logo {
-  background-color: #666666;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
-}
-
-.email-template {
-  width: 100%;
-  height: auto;
-  box-shadow: 0 0 7px 5px rgba(0, 0, 0, .3);
 }
 
 .application-head {
@@ -447,22 +431,6 @@ p {
   margin-top: 5px;
   text-shadow: none;
   list-style: disc inside;
-}
-
-.technologies-box {
-  width: 700px;
-  height: 70px;
-  margin: 0 auto;
-}
-
-.technology {
-  display: inline-block;
-  width: auto;
-  height: 40px;
-}
-
-.handlebars {
-  height: 70px;
 }
 
 .project-footer {
@@ -620,12 +588,12 @@ p {
 }
 
 .contact-form {
-  width: 400px;
+  width: 390px;
   margin: 0 auto;
 }
 
 .contact-input {
-  width: 390px;
+  width: 380px;
   height: 50px;
   margin-top: 10px;
   border: 1px solid white;
@@ -634,12 +602,12 @@ p {
   background-color: white;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, .2);
   color: black;
-  padding: 5px;
+  padding: 2.5px;
 }
 
 .contact-textarea {
-  width: 390px;
-  padding: 5px;
+  width: 380px;
+  padding: 2.5px;
   margin-top: 10px;
   min-height: 150px;
   background-color: white;
